--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0px auto;
     display: inline-block;
     margin: 1em;
+    /*change*/
 }
 .top-nav {
     height: 150px;
@@ -41,5 +42,6 @@
     display: inline-block;
     margin: .5em;
     padding: 1px;
-}/* Test*/
+
+
 
